--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
-    "name": "Yassine_Naanani_Hamza_Aboumoussa/vikings",
-    "description": "A website for the Vikings Club, showcasing their activities, events, and community involvement."
+    "name": "yourusername/vikings",
+    "description": "A website for the Vikings Club, showcasing their activities, events, and community involvement.",
+    "license": "MIT"
 }
