--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "club-vikings-rouen-waterpolo",
+    "name": "club-vikings-0",
     "description": "A website for the Vikings Club, showcasing their activities, events, and community involvement.",
     "license": "MIT"
 }
