--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "/vikings",
+      "name": "club-vikings/website",
     "description": "A website for the Vikings Club, showcasing their activities, events, and community involvement.",
     "license": "MIT"
 }
